package com.daw.cinemadaw.domain.cinema;

public enum SeatType {
    STANDARD, PREMIUM, ADAPTED
}
