package com.daw.cinemadaw.domain.user;

// Enumeració de rols possibles
public enum Role {
    ADMIN,
    CLIENT
}
