@startuml

skinparam classAttributeIconSize 0
left to right direction

' --- ENTITATS DE L'ESPAI ---

class Cinema {
    - id : Long
    - name : String
    - address : String
    - city : String
    - postalCode : String
    - rooms : List<Room>
}

class Room {
    - id : Long
    - name : String
    - capacity : Integer
}

class Seat {
    - id : Long
    - seatRow : int
    - number : int
    - posX : int
    - posY : int
    - active : boolean
}

enum SeatType {
    STANDARD
    PREMIUM
    ADAPTED
}

' --- ENTITATS DE PROGRAMACIÓ ---

class Movie {
    - id : Long
    - titol : String
    - durada : Integer
    - genere : String
    - descripcio : String
    - data_estrena : LocalDate
}

class Screening {
    - id : Long
    - screeningDateTime : LocalDateTime
    - price : double
}

' --- ENTITATS DE VENDA I DINERS ---

class Order {
    - id : Long
    - dataHora : LocalDateTime
    - importTotal : double
    - nomClient : String
    - correuElectronic : String
    - estat : String
}

class Ticket {
    - id : Long
    - preu : Double
}

class Menjar {
    - id : Long
    - nom : String
    - preu : double
}

' --- USUARIS I SEGURETAT ---

class User {
    - id : Long
    - username : String
    - password : String
}

enum Role {
    ADMIN
    CLIENT
}



' --- RELACIONS ---

' Estructura física
Cinema "1" *-- "0*" Room : conté
Room "1" *-- "0*" Seat : conté
Seat --> SeatType : és de tipus

' Programació
Screening "0*" --> "1" Movie : projecta
Screening "0*" --> "1" Room : es fa a

' Usuaris
User --> Role : té un

' Procés de Compra (Venda)
Order "0..*" --> "1" User : realitzada per
Order "1" *-- "0*" Ticket : inclou
Order "1" *-- "0*" Menjar : pot contenir molts

' Detall del Tiquet
Ticket --> Screening : per a la sessió
Ticket --> Seat : assignat a
Ticket --> User : propietari (opcional)

@enduml